syntax = "proto3";

package service;

import "google/protobuf/duration.proto";

option go_package = "../grpc/api;grpc";

service Statistics {
  rpc ListStatistics(SubscriptionRequest) returns (stream StatisticsResponse);
}

message SubscriptionRequest {
  google.protobuf.Duration period = 1;
  int64 depth = 2;
}

message LoadAverage {
  string status = 1;
  string oneMin = 2;
  string fiveMin = 3;
  string fifteenMin = 4;
}

message CPUAverage {
  string status = 1;
  string user = 2;
  string sys = 3;
  string idle = 4;
}

message StatisticsResponse {
  string status = 1;
  LoadAverage la = 2;
  CPUAverage cp = 3;
}